<resources>
    <string name="app_name">Score Keeper</string>

    <string name="title_activity_players_number">Enter number of players</string>
    <string name="negative_number_of_players_error">Wrong number of players</string>

    <string name="start_new_game">Start new game</string>
    <string name="title_activity_player_names">Enter players\' names</string>
    <string name="enter_name_label">Player %d: </string>
    <string name="title_activity_scores">Scores</string>

    <string name="title_activity_update_scores">Change scores</string>
    <string name="minus_1">-1</string>
    <string name="minus_5">-5</string>
    <string name="minus_10">-10</string>
    <string name="plus_1">+1</string>
    <string name="plus_5">+5</string>
    <string name="plus_10">+10</string>
</resources>
